--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
+\js
 {
-  "name": "CowCraft",
-  "description": "Heroku Bot",
+  "name": "TwinFactions",
   "version": "1.0.0",
+  "description": "Heroku Bot",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "author": "ModdingTwinz",
+  "license": "MIT",
   "dependencies": {
-    "discord.js": "11.4.2",
+    "discord.js": "^11.4.2",
     "request": "2.81.0",
- }
-}
+  }
