--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "Botiso",
+  "name": "TwinFactions",
   "description": "Heroku Bot",
   "version": "1.0.0",
-  "main": "bot.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "discord.js": "11.4.2",
     "request": "2.81.0",
-    "fs": "0.0.2",
-    "ms": "2.1.1",
-    "discord-eco": "0.0.10"
   }
 }
